<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:id="@+id/quizLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionNimberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing"
            android:contentDescription="@string/image_description"
            android:text="@string/question" />

        <ImageView
            android:id="@+id/flagImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/quessCountryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quess_country" />

        <LinearLayout
            android:id="@+id/row1LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/button8"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:lines="2"
                android:text="Button"
                android:textColor="@color/button_text_color" />

        </LinearLayout>

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="@dimen/answer_size"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>